[project]
name = "winlldp"
version = "v0.10.0"
description = "LLDP service for Windows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scapy>=2.5.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "pywin32>=306",
    "psutil>=5.9.0",
    "tabulate>=0.9.0"
]

[project.scripts]
winlldp = "winlldp.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"